--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LiveScore_app</string>
+    <string name="app_name">LiveScore</string>
     <string name="show_matches">Show matches</string>
     <string name="saved_matches">Saved Matches</string>
     <string name="away_team_crest">Away team crest</string>
