--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="hint_email">Email Address</string>
     <string name="hint_pass">Password</string>
     <string name="login">Login</string>
+    <string name="register">Register</string>
 </resources>
