--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="hint_pass">Password</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="about_the_author">About the author</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
